# mb-tools

./: go.mod  go.sum  main.go
.github/workflows/: pwiz-wrapper.yml
cmd/openapi-server/: Dockerfile  README.md  main.go  msdata_api_test.go
cmd/openapi-server/.openapi-generator/: FILES
cmd/openapi-server/api/: openapi.yaml
cmd/openapi-server/src/: api.go  api_default_service.go  common.go  error.go  helpers.go  impl.go  model_error.go  model_error_msg.go  model_get_file_name_200_response.go  model_get_instrument_analyzer_200_response.go  model_get_instrument_detector_200_response.go  model_get_instrument_manufacturer_200_response.go  model_get_instrument_model_200_response.go  model_get_ionisation_method_200_response.go  model_get_isolation_windows_200_response.go  model_get_isolation_windows_200_response_isolation_windows_inner.go  model_get_sample_data_200_response.go  model_get_scan_peak_count_200_response.go  model_get_scan_peaks_200_response.go  model_get_software_200_response.go  model_get_source_200_response.go  model_post_file_200_response.go  routers.go
common/: helper.go
data/examples/: tiny.invalid.mzML
data/openapi/: config.yml  mzapi.yml.yaml  mzmlapi.yaml
data/openapi/templates/: controller-api.mustache  routers.mustache
msVisualizer/: plot.go
mzmlReader/: cHelper.go  pWizMSData.go  pWizMSData_test.go  plot.go  pwizTestData.go  reader.go  reader_test.go
openapi-server/: .openapi-generator-ignore  README.md  go.mod  main.go
openapi-server/.openapi-generator/: FILES
openapi-server/api/: openapi.yaml
openapi-server/src/: api.go  api_default.go  api_default_service.go  common.go  helpers.go  impl.go  logger.go  model_get_chromatogram_count_200_response.go  model_get_file_name_200_response.go  model_get_instrument_analyzer_200_response.go  model_get_instrument_detector_200_response.go  model_get_instrument_manufacturer_200_response.go  model_get_instrument_model_200_response.go  model_get_ionisation_method_200_response.go  model_get_isolation_windows_200_response.go  model_get_isolation_windows_200_response_inner.go  model_get_isolation_windows_200_response_inner_isolation_windows_.go  model_get_isolation_windows_200_response_isolation_windows_inner.go  model_get_sample_data_200_response.go  model_get_scan_count_200_response.go  model_get_scan_peak_count_200_response.go  model_get_scan_peaks_200_response.go  model_get_scans_data_200_response.go  model_get_software_200_response.go  model_get_source_200_response.go  model_post_file_200_response.go  routers.go
pwiz-wrapper/: CMakeLists.txt  cpwiz.cpp  cpwiz.h  main-test.cpp
schema/: cvmapping.go
scripts/: generate_api_server.sh
shared/common/: helper.go
shared/mzmlReader/: cHelper.go  pWizMSData.go  pWizMSData_test.go  pwizTestData.go
shared/schema/: mzml.go  mzmlidx.go
